2006-12-10  Rob Buis  <buis@kde.org>

        Reviewed by Darin.

        Updated testcases due to:
        http://bugs.webkit.org/show_bug.cgi?id=10996
        WebKit needs (possibly private) XML/SVG innerText support (for DumpRenderTree)

        * dom/svg/level3/xpath/Attribute_Nodes-expected.txt:
        * dom/svg/level3/xpath/Attribute_Nodes_xmlns-expected.txt:
        * dom/svg/level3/xpath/Comment_Nodes-expected.txt:
        * dom/svg/level3/xpath/Conformance_Expressions-expected.txt:
        * dom/svg/level3/xpath/Conformance_hasFeature_3-expected.txt:
        * dom/svg/level3/xpath/Conformance_hasFeature_empty-expected.txt:
        * dom/svg/level3/xpath/Conformance_hasFeature_null-expected.txt:
        * dom/svg/level3/xpath/Conformance_isSupported_3-expected.txt:
        * dom/svg/level3/xpath/Conformance_isSupported_empty-expected.txt:
        * dom/svg/level3/xpath/Conformance_isSupported_null-expected.txt:
        * dom/svg/level3/xpath/Element_Nodes-expected.txt:
        * dom/svg/level3/xpath/Processing_Instruction_Nodes-expected.txt:
        * dom/svg/level3/xpath/Text_Nodes-expected.txt:
        * dom/svg/level3/xpath/XPathEvaluatorCast01-expected.txt:
        * dom/svg/level3/xpath/XPathEvaluator_createExpression_INVALID_EXPRESSION_ERR-expected.txt:
        * dom/svg/level3/xpath/XPathEvaluator_createExpression_NAMESPACE_ERR_01-expected.txt:
        * dom/svg/level3/xpath/XPathEvaluator_createExpression_NAMESPACE_ERR_02-expected.txt:
        * dom/svg/level3/xpath/XPathEvaluator_createExpression_NS-expected.txt:
        * dom/svg/level3/xpath/XPathEvaluator_createExpression_no_NS-expected.txt:
        * dom/svg/level3/xpath/XPathEvaluator_createNSResolver_all-expected.txt:
        * dom/svg/level3/xpath/XPathEvaluator_createNSResolver_document-expected.txt:
        * dom/svg/level3/xpath/XPathEvaluator_createNSResolver_documentElement-expected.txt:
        * dom/svg/level3/xpath/XPathEvaluator_evaluate_INVALID_EXPRESSION_ERR-expected.txt: