@@ -2,41 +2,16 @@
 <head>
 <title>Selection in text with RTL override in ATSUI</title>
 <script type="text/javascript">
-function step7()
-{
-    eventSender.mouseUp();
-    layoutTestController.notifyDone();
+function test() {
+  eventSender.mouseMoveTo(14, 10);
+  eventSender.mouseDown();
+  eventSender.mouseMoveTo(15, 10);
+  eventSender.mouseMoveTo(60, 10);
+  eventSender.mouseUp();
 }
-
-function step6()
-{
-    eventSender.mouseMoveTo(60, 10);
-    window.setTimeout(step7, 1);
-}
-
-function step5()
-{
-    eventSender.mouseMoveTo(15, 10);
-    window.setTimeout(step6, 1);
-}
-
-function step4()
-{
-    eventSender.mouseDown();
-    window.setTimeout(step5, 1);
-}
-
-function step3()
-{
-    eventSender.mouseMoveTo(14, 10);
-    window.setTimeout(step4, 1000);
-}
-
-step3();
-layoutTestController.waitUntilDone();
 </script>
 </head>
-<body style="margin: 0; padding: 0;"">
+<body style="margin: 0; padding: 0;" onload="test()">
 <!-- The &#x0300; forces ATSUI rendering -->
 <bdo dir="rtl">&#x0300;muspimeroL</bdo>
 <hr>
